# Voice-analysis.mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
src/voice_analysis_mcp/: __init__.py  audio_io.py  conversation.py  prosody.py  quality.py  server.py  transcription.py  vad.py  visuals.py
tests/: conftest.py  test_analysis.py  test_server.py
